force-app/main/default/objects/ssot__MessagingSession__dlm/fields/ssot__AcceptedDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__AcceptedDateTime__c</fullName>
    <label>Accepted DateTime</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AcceptedDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>