force-app/main/default/objects/ssot__MessagingSession__dlm/fields/ssot__MessagingSessionStartTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__MessagingSessionStartTime__c</fullName>
    <label>Messaging Session Start Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MessagingSessionStartTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>