force-app/main/default/objects/ssot__MessagingSession__dlm/fields/ssot__MessagingSessionStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__MessagingSessionStatus__c</fullName>
    <label>Messaging Session Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MessagingSessionStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>