force-app/main/default/objects/ssot__MessagingSession__dlm/fields/ssot__Origin__c.field-meta.xml
<CustomField>
    <fullName>ssot__Origin__c</fullName>
    <label>Origin</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Origin</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>