force-app/main/default/objects/ssot__MessagingSession__dlm/fields/ssot__PreviewDetailsText__c.field-meta.xml
<CustomField>
    <fullName>ssot__PreviewDetailsText__c</fullName>
    <label>Preview Details</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PreviewDetailsText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>