force-app/main/default/objects/ssot__MessagingSession__dlm/fields/ssot__rel_1716726580347_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716726580347_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MessagingSession_ConversationId_map__rel</label>
    <referenceTo>ssot__Conversation__dlm</referenceTo>
    <relationshipLabel>MessagingSession_ConversationId_map__rel</relationshipLabel>
    <relationshipName>rel_1716726580347_end</relationshipName>
    <type>Lookup</type>
</CustomField>